Add google.generativeai lib

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Ethereum ERC RAG"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "google-generativeai>=0.8.5",
     "python-frontmatter>=1.1.0",
     "requests>=2.32.5",
 ]
