--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "google-generativeai>=0.8.5",
+    "minsearch>=0.0.5",
     "python-dotenv>=1.0.0",
     "python-frontmatter>=1.1.0",
     "requests>=2.32.5",
