--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "google-generativeai>=0.8.5",
     "minsearch>=0.0.5",
+    "pydantic-ai>=1.0.10",
     "python-dotenv>=1.0.0",
     "python-frontmatter>=1.1.0",
     "requests>=2.32.5",
